--- a/src/components/home/news/News.css
+++ b/src/components/home/news/News.css
@@ -206,14 +206,11 @@
 }
 
 .news-slider-item:hover .news-slider-description p {
-  margin-top: 1rem;
-  /* font-size: 17.5px; */
-  /* line-height: 20px; */
   overflow: hidden;
   text-overflow: none;
-  height: 10rem;
+  height: 10.3rem;
   display: -webkit-box;
-  -webkit-line-clamp: 5;
+  -webkit-line-clamp: 10;
   -webkit-box-orient: vertical;
   color: #101010;
 }
@@ -222,6 +219,7 @@
   border-radius: 0.4rem;
   object-fit: cover;
   width: 100%;
+  max-height: 138px;
 }
 
 .news-slider-image-container {
@@ -303,18 +301,18 @@
 
   .news-slider-item {
     width: 154px;
-    height: 280px;
+    /* height: 280px; */
   }
 
   .news-slider-description h3 {
     font-size: 8.9px;
-    height: 32px;
+    height: 35px;
     -webkit-line-clamp: 3;
   }
 
   .news-slider-description p {
     font-size: 6.66px;
-    height: 40px;
+    height: 39px;
     margin-bottom: 0.3rem;
   }
 
@@ -327,12 +325,11 @@
   }
 
   .news-slider-item:hover .news-slider-description p {
-    margin-top: 0;
     font-size: 6.66px;
     overflow: hidden;
     text-overflow: none;
     height: 40px;
-    margin-top: 0.5rem;
+    /* margin-top: 0.5rem; */
     display: -webkit-box;
     -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
@@ -363,7 +360,7 @@
   @media only screen and (max-width: 415px) {
     .news-slider-item {
       width: 144px;
-      height: 280px;
+      /* height: 280px; */
     }
   }
 
